--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -17,6 +17,11 @@
 .search-form__button:focus {
     outline: none;
 }
+
+.search-form__button:hover {
+    opacity: 0.8;
+}
+
 .search-form__divider {
     width: 100%;
     border: 1px solid #aaaaaa;
